fix: remove border on mobile checkout total

--- a/catalog/view/theme/melle/stylesheet/sass/_checkout.scss
+++ b/catalog/view/theme/melle/stylesheet/sass/_checkout.scss
@@ -70,7 +70,6 @@
   }
 
   .basket-orders__table-mobile .basket-orders__price {
-    border: 1px #2b2a29 solid;
     padding: 5px 2px;
     text-align: right;
   }
